# ppocrv5-onnx

./: README.md  config.yaml  engine.py  main.py  pyproject.toml  utils.py
models/PP-OCRv5_mobile_rec/: inference.yml
ppocr/det/: crop_poly.py  postprocess.py  preprocess.py
ppocr/rec/: postprocess.py
ppocr/tools/: visualizer.py
src/ppocrv5_onnx/: cli.py  engine.py  utils.py
