[project]
name = "ppocrv5-onnx"
version = "0.1.0"
description = "PP-OCRv5 ONNX runtime with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "onnxruntime; platform_system != 'Linux' or platform_machine != 'x86_64'",
  "onnxruntime==1.*; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "opencv-python",
  "numpy",
  "omegaconf",
  "loguru",
  "matplotlib",
  "shapely",
  "pyclipper",
]

[project.scripts]
ppocrv5-onnx = "ppocrv5_onnx.cli:main"

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
